--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "laravel/framework": "6.*",
-        "stripe/stripe-php": "4.*|5.*|6.*"
+        "stripe/stripe-php": "7.*"
     },
     "autoload": {
         "psr-4": {
